Make sure switches don't get squished on small screens (#721)

--- a/assets/css/components/_toggle.scss
+++ b/assets/css/components/_toggle.scss
@@ -1,8 +1,8 @@
 .onoffswitch {
   margin-right: $small-spacing;
+  min-width: 65px;
   position: relative;
   user-select: none;
-  width: 60px;
 }
 
 .onoffswitch-checkbox {
@@ -42,7 +42,7 @@
   box-shadow: inset 0 1px 3px 0 rgba(121, 0, 0, 0.5);
   color: $white;
   content: "ON";
-  padding-left: $tiny-spacing;
+  padding-left: $tiniest-spacing;
 }
 
 .onoffswitch-inner::after {
@@ -50,7 +50,7 @@
   box-shadow: $form-box-shadow;
   color: $tbds-brand-red;
   content: "OFF";
-  padding-right: $tiny-spacing;
+  padding-right: $tiniest-spacing;
   text-align: right;
 }
 
@@ -60,7 +60,7 @@
   background-color: $white;
   border-radius: $base-border-radius;
   display: block;
-  margin-right: 4px;
+  margin-right: 6px;
   transition: all 0.3s ease-in 0s;
 }
 
